--- a/src/app/components/card-component/card-component.component.css
+++ b/src/app/components/card-component/card-component.component.css
@@ -8,15 +8,18 @@
 }
 
 mat-card {
-  width: 200%;
+  width: 100%;
 }
+
 mat-card-title-group{
-  mat-card-title{
-    padding: 20px;
-  }
   padding: 50px;
   justify-items: flex-start;
 }
+
+  mat-card-title{
+    padding: 20px;
+  }
+
 
 mat-paginator {
   display: flex;
