--- a/src/app/components/search-bar/search-bar.component.css
+++ b/src/app/components/search-bar/search-bar.component.css
@@ -1,32 +1,32 @@
 .search-container {
   display: flex;
   justify-content: center;
-  padding: 20px 20px 20px 150px; /* Ridotto in un'unica dichiarazione */
+  padding: 20px;
   background-image: url('./searchBarImage.png');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   min-height: 200px;
+  align-items: center;
   flex-direction: column;
-  align-items: flex-start;
 }
 
 .search-bar {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-left: 200px;
 }
 
 .custom-field {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: flex-start;
+  align-items: center;
   background-color: #ebebeb;
-  margin-left: 10px;
   padding: 10px;
   border-radius: 5px;
+  margin-left: 15px;
+  margin-bottom: 15px;
 }
 
 /* Stili per il mat-label */
@@ -46,13 +46,69 @@
   text-align: center;
 }
 
-.search-bar button {
+.search-container button {
   margin-left: 20px;
   background-color: #e0843d;
   color: white;
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  width: 100px;
+  width: 300px;
   height: 40px;
+}
+
+.button-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10px;
+}
+
+/* Contenitore del bottone */
+.icon-button {
+  position: relative;
+  width: 50px; /* Bottone inizialmente piccolo */
+  height: 40px;
+  overflow: hidden;
+  padding: 10px;
+  font-size: 16px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #4CAF50; /* Colore iniziale */
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: width 0.3s ease, background-color 0.3s ease; /* Transizione fluida */
+}
+
+/* Icona iniziale */
+.icon-button .icon {
+  font-size: 24px;
+  transition: opacity 0.3s ease;
+}
+
+/* Testo nascosto inizialmente */
+.icon-button .button-text {
+  opacity: 0;
+  visibility: hidden;
+  white-space: nowrap; /* Evita che la scritta vada a capo */
+  transition: opacity 0.3s ease, visibility 0.3s ease;
+  padding-left: 10px; /* Spazio tra l'icona e il testo */
+}
+
+/* Quando il mouse passa sopra */
+.icon-button:hover {
+  width: 150px; /* Il bottone diventa più largo */
+}
+
+/* Nasconde l'icona e mostra il testo al passaggio del mouse */
+.icon-button:hover .icon {
+  opacity: 0; /* Nasconde l'icona */
+}
+
+.icon-button:hover .button-text {
+  opacity: 1;
+  visibility: visible;
 }
